--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/blog">All posts</a></li>
-                <li><a href="/blog/newpost">New post</a></li>
+                <li><a href="/newpost">New post</a></li>
             </ul>
         </nav>
         {% block content %}
