--- a/templates/blog.html
+++ b/templates/blog.html
@@ -5,10 +5,14 @@
     .header {
         text-align: center;
     }
+.post-author {
+    font-style: italic;
+    font-size: 12px;
+}
 </style>
 
 
-<h1 class="header">Build a Blog</h1>
+<h1 class="header">Blog posts!</h1>
 
 {% if blogs|length == 0 %}
         <p>No Entries yet</p>
@@ -17,11 +21,11 @@
             {% for blog in range(blogs|length, 0, -1) %}
             <h2><a href="/blog?id={{blogs[blog - 1].id}}">{{blogs[blog - 1].title}}</a></h2>
             <p>{{blogs[blog - 1].body}}</p>
+            <p class="post-author">written by <a href="/blog?user={{blogs[blog - 1].owner.id}}">{{blogs[blog - 1].owner.userName}}</a></p>
             <hr />
             {% endfor %}
             
         {% endif %}
 
-
-    
+        <h1>blog posts!</h1>
 {% endblock %}
