--- a/templates/entries.html
+++ b/templates/entries.html
@@ -5,11 +5,17 @@
     .header {
         text-align: center;
     }
+
+.post-author {
+    font-style: italic;
+    font-size: 12px;
+}
 </style>
 
 <h1 class="header">{{blogs.title}}</h1>
 <br>
 <p>{{blogs.body}}</p>
+<p class="post-author">written by <a href="/blog?user={{blogs.owner.id}}">{{blogs.owner.userName}}</a></p>
 
 
 
