--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 
 <ul>
 {% for user in users %}
-<li><a href="/blog?user={{user.userName}}">{{user.userName}}</a></li>
+<li><a href="/blog?user={{user.id}}">{{user.userName}}</a></li>
 {% endfor %}
 </ul>
 
